# bgpkit-parser

./: .gitignore  AGENTS.md  BGP_CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FLOWSPEC_IMPLEMENTATION.md  LICENSE  README.md  README.tpl  codecov.yml  generate-docs.sh
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: audit_on_change.yml  audit_scheduled.yml  build.yml  codecov.yml  format.yml  release.yml  rust.yml
benches/: README.md  bench_main.rs  data_source.rs  download.sh  internals.rs  mrt_type.rs
benches/benchmarks/: mod.rs
bgp-models/: Cargo.toml  README.md
bgp-models/src/: err.rs  lib.rs  network.rs  prelude.rs
bgp-models/src/bgp/: attributes.rs  capabilities.rs  community.rs  elem.rs  error.rs  mod.rs  role.rs
bgp-models/src/mrt/: bgp4mp.rs  mod.rs  tabledump.rs
bgpkit-parser/: .gitignore  Cargo.toml  README.tpl
bgpkit-parser-py/: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  test.py
bgpkit-parser-py/src/: lib.rs
bgpkit-parser/benches/: bench_main.rs  data_source.rs  internals.rs
bgpkit-parser/benches/benchmarks/: bgpdump.rs  bgpkit_parser.rs  mod.rs
bgpkit-parser/examples/: cache_reading.rs  count_elems.rs  deprecated_attributes.rs  extended_communities.rs  filters.rs  find_as_set_messages.rs  only-to-customer.rs  parse-files-from-broker-parallel.rs  parse-files-from-broker.rs  parse-single-file.rs  peer_index_table.rs  real-time-ris-live-websocket.rs  real-time-routeviews-kafka-openbmp.rs  records_iter.rs
bgpkit-parser/src/: error.rs  lib.rs
bgpkit-parser/src/encoder/: mod.rs
bgpkit-parser/src/encoder/mrt/: common_header.rs  mod.rs
bgpkit-parser/src/models/: mod.rs
bgpkit-parser/src/models/bgp/: capabilities.rs  elem.rs  role.rs
bgpkit-parser/src/models/bgp/attributes/: aspath.rs  atomic_aggregate.rs  mod.rs  nlri.rs  origin.rs
bgpkit-parser/src/models/mrt/: mod.rs  tabledump.rs
bgpkit-parser/src/models/network/: afi.rs  asn.rs  nexthop.rs  prefix.rs
bgpkit-parser/src/parser/: filter.rs  iters.rs  mod.rs  utils.rs
bgpkit-parser/src/parser/bgp/: attributes.rs  attributes_tests.rs  messages.rs  mod.rs
bgpkit-parser/src/parser/bgp/attributes/: README.md  attr_01_origin.rs  attr_02_17_as_path.rs  attr_03_next_hop.rs  attr_04_med.rs  attr_05_local_pref.rs  attr_07_18_aggregator.rs  attr_08_communities.rs  attr_09_originator.rs  attr_10_13_cluster.rs  attr_14_15_nlri.rs  attr_16_25_extended_communities.rs  attr_32_large_communities.rs  attr_35_otc.rs  mod.rs
bgpkit-parser/src/parser/bmp/: mod.rs  openbmp.rs
bgpkit-parser/src/parser/bmp/messages/: headers.rs  initiation_message.rs  mod.rs  peer_down_notification.rs  peer_up_notification.rs  route_mirroring.rs  route_monitoring.rs  stats_report.rs  termination_message.rs
bgpkit-parser/src/parser/mrt/: mod.rs  mrt_elem.rs  mrt_header.rs  mrt_record.rs
bgpkit-parser/src/parser/mrt/messages/: bgp4mp.rs  table_dump_message.rs  table_dump_v2_message.rs
bgpkit-parser/src/parser/mrt/mrt_message/: bgp4mp.rs  mod.rs  table_dump_message.rs  table_dump_v2_message.rs
bgpkit-parser/src/parser/rislive/: error.rs  mod.rs
bgpkit-parser/src/parser/rislive/messages/: mod.rs  pong.rs  raw_bytes.rs  ris_error.rs  ris_message.rs
bgpkit-parser/tests/: bgpkit-parser-tests.rs  test_encoding.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: README.md  analyze_rib.rs  bmp_listener.rs  cache_reading.rs  count_attributes.rs  count_elems.rs  deprecated_attributes.rs  display_elems.rs  extended_communities.rs  extract_problematic_records.rs  fallible_parsing.rs  filter_export_rib.rs  filters.rs  find_as_set_messages.rs  mrt_debug.rs  mrt_filter_archiver.rs  multiple_filters_or_logic.rs  only-to-customer.rs  only_to_customer.rs  parallel_records_to_elem.rs  parse-files-from-broker-parallel.rs  parse-files-from-broker.rs  parse-single-file.rs  parse_bmp_mpls.rs  parse_files_from_broker.rs  parse_single_file.rs  parse_single_file_parallel.rs  peer_index_table.rs  raw_attributes.rs  real-time-ris-live-websocket-async.rs  real-time-ris-live-websocket.rs  real-time-routeviews-kafka-openbmp.rs  real-time-routeviews-kafka-to-mrt.rs  real_time_ris_live_websocket.rs  real_time_ris_live_websocket_async.rs  real_time_routeviews_kafka_openbmp.rs  records_iter.rs  ris-live.rs  route_level_parsing.rs  routeviews-kafka.rs  (+4 more)
examples/local_only/: Cargo.toml  README.md  updates.bz2
examples/local_only/src/: main.rs
examples/rib_entries_age_study/: .gitignore  Cargo.toml  README.md
examples/rib_entries_age_study/output/: summary.txt
examples/wasm/: mrt-explorer.html
examples/wasm/kafka-openbmp-stream/: .gitignore  README.md  kafka-stream.js  package.json
examples/wasm/parse-mrt-file/: .gitignore  README.md  mrt-explorer.jsx  package.json  parse-mrt.js
scripts/: bench_hyperfine.sh  coverage-misses.sh
src/: error.rs  io.rs  lib.rs  wasm.rs
src/encoder/: mod.rs  rib_encoder.rs  updates_encoder.rs
src/formats/: bgpdump.rs
src/models/: err.rs  mod.rs
src/models/bgp/: capabilities.rs  community.rs  elem.rs  error.rs  linkstate.rs  mod.rs  role.rs  tunnel_encap.rs
src/models/mrt/: bgp4mp.rs  mod.rs  table_dump.rs  table_dump_v2.rs  tabledump.rs
src/models/network/: afi.rs  asn.rs  mod.rs  mpls.rs  nexthop.rs  prefix.rs
src/models/rpki/: mod.rs  rtr.rs
src/parser/: README.md  filter.rs  iters.rs  mod.rs  utils.rs
src/parser/bgp/: attributes.rs  messages.rs  mod.rs
src/parser/bmp/: error.rs  mod.rs  openbmp.rs
src/parser/iters/: default.rs  fallible.rs  mod.rs  raw.rs  route.rs  update.rs
src/parser/mrt/: mod.rs  mrt_elem.rs  mrt_encoder.rs  mrt_header.rs  mrt_record.rs
src/parser/rislive/: error.rs  mod.rs
src/parser/rpki/: mod.rs  rtr.rs
src/wasm/: README.md  build.sh
src/wasm/js/: index.d.ts  index.js  (+4 more)
tests/: bgp-parser-tests.rs  raw_iter.rs  record_parse.rs  test_bgp_update_validation.rs  test_encoding.rs
tests/fuzz/: Cargo.toml  README.md  lib.rs
tests/fuzz/fuzz_targets/: fuzz_attributes.rs  fuzz_bgp_message.rs  fuzz_bmp.rs  fuzz_mrt_header.rs  fuzz_mrt_record.rs  fuzz_nlri.rs  fuzz_parser.rs  fuzz_rislive.rs
(+74 files in other folders)
