[package]
name = "bgp-models"
version = "0.8.0"
edition = "2018"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/bgp-models"
documentation = "https://docs.rs/bgp-models"
description = """
Structs and other building blocks for BGP and MRT related Rust projects.
"""
keywords = ["bgp", "mrt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.46.0"

[dependencies]
enum-primitive-derive = "0.2"
num-traits = "0.2"
log = "0.4"
ipnetwork = {version="0.18", default-features=false}
itertools = "0.10.1"
serde={version="1", features=["derive"]}

[dev-dependencies]
serde_json = "1.0"