[package]
name = "pybgpkit-parser"
description = "BGPKIT Parser Python Binding"
keywords = ["bgp", "mrt", "parser"]
repository = "https://github.com/bgpkit/bgpkit-parser/tree/main/bgpkit-parser-py"
documentation = "https://github.com/bgpkit/bgpkit-parser/blob/main/bgpkit-parser-py/README.md"
version = "0.4.1"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "pybgpkit_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
bgpkit-parser = {path="../bgpkit-parser"}
pyo3 = { version = "0.18.2", features = ["extension-module"] }
dict_derive = "0.4.0"

[build-dependencies]
pyo3-build-config = "0.18.2"
