[package]
name = "bgpkit-parser"
version = "0.9.0-alpha-3"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bgpkit/bgpkit-parser"
documentation = "https://docs.rs/bgpkit-parser"
description = """
A library to parse MRT/BGP/BMP binary data.
"""
keywords = ["bgp", "bgpkit", "mrt"]
rust-version = "1.48.0"

[package.metadata]
msrv = "1.48.0"

[dependencies]
ipnet = "2.7"
enum-primitive-derive = "0.2"
num-traits = "0.2"
chrono = "0.4"
regex = "1"
byteorder = "1"

bgp-models = {path="../bgp-models", version="0.9.0"}

# logging
log="0.4"
itertools = "0.10.1"

# ris-live parsing
serde={version="1.0.130", features=["derive"]}
serde_json = "1.0.69"

# bmp/openbmp parsing
hex="0.4.3"

oneio = {version= "0.7.2", features=["lib_only"]}

env_logger = {version="0.10", optional=true}
clap = {version= "4.0", features=["derive"], optional=true}

[dev-dependencies]
bgpkit-broker = "0.5.1"
kafka = "0.9.0"
tungstenite= "0.18.0"
url = "2.1.0"
criterion = {version= "0.4.0", features=["html_reports"]}
rayon = "1.5.1"
ureq = "2.6.2"
bzip2 = "0.4"
flate2 = "1.0.25"
md5 = "0.7.0"
which = "4.4.0"

[features]
default = ["build-binary"]
build-binary = ["clap", "env_logger"]

[[bench]]
name = "internals"
harness = false

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "bgpkit-parser"
path = "src/bin/main.rs"
required-features = ["build-binary"]
