[package]
name = "bgpkit-parser"
version = "0.9.1"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bgpkit/bgpkit-parser"
documentation = "https://docs.rs/bgpkit-parser"
description = """
A library to parse MRT/BGP/BMP binary data.
"""
keywords = ["bgp", "bgpkit", "mrt"]

[[bin]]
name = "bgpkit-parser"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[dependencies]
ipnet = "2.7"
enum-primitive-derive = "0.2"
num-traits = "0.2"
regex = "1"
log="0.4"
itertools = "0.10.1"
serde={version="1.0.130", features=["derive"]}
serde_json = "1.0.69" # RIS Live parsing
hex="0.4.3" # bmp/openbmp parsing
oneio = {version= "0.8.1", features=["lib_only"]}
bytes = "1.4.0"

env_logger = {version="0.10", optional=true}
clap = {version= "4.0", features=["derive"], optional=true}

[features]
default = ["build-binary"]
build-binary = ["clap", "env_logger"]

[[bench]]
name = "internals"
harness = false

[[bench]]
name = "bench_main"
harness = false

[dev-dependencies]
bgpkit-broker = "0.5.1"
kafka = "0.9.0"
tungstenite= "0.18.0"
url = "2.1.0"
criterion = {version= "0.4.0", features=["html_reports"]}
rayon = "1.5.1"
ureq = "2.6.2"
bzip2 = "0.4"
flate2 = "1.0.25"
md5 = "0.7.0"
which = "4.4.0"

