[package]
name = "bgpkit-parser-cli"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
version = "0.1.0"
publish = false
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/bgpkit-parser"
documentation = "https://docs.rs/bgpkit-parser"
description = """
A cli tool to parse MRT/BGP/BMP binary data.
"""
keywords = ["bgp", "bgpkit", "mrt"]

[dependencies]
env_logger = "0.9.0"
serde="1.0"
serde_json = "1.0"
structopt = "0.3"
bgpkit-parser = {path=".."}